--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -28,14 +28,15 @@
     <div class="col-md-7 col-lg-7">
         <h2>Regras</h2>
         <ul>
-            <div class="row justify-content-center">
-                <button>Jogar</button>
+            <div class="row justify-content-center mt-2">
+                <a class= "btn btn-primary" href="/jogar" >Jogar</a>
             </div>
-            <div class="row justify-content-center">
-                <button>Criar Salas</button>
+            <div class="row justify-content-center mt-2">
+                <a class="btn btn-primary" href="/criar_sala">Criar Sala</a>
+                
             </div>
-            <div class="row justify-content-center">
-                <button>Salas Criadas</button>
+            <div class="row justify-content-center mt-2">
+                <a class="btn btn-primary" href="/salas">Salas Criadas</a>
             </div>
 
 
