--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +13,13 @@
     
 </head>
 <body>
-    <div>
+
+
+    <div class="container mt-5">
+    <div class="card-principal">
         {% block content %}
         {% endblock %}
+    </div>
     </div>
 </body>
 </html>
