--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<div class="container mt-5">
-    <div class="card-principal">
+<div>
+
 
 
         <h1>Bem-vindo ao STOP!</h1>
@@ -25,7 +25,7 @@
                     <div class="col-md-7 col-lg-7 d-flex flex-column justify-content-center">
                         <form action="/jogar">
                             
-                            <input type="text" class="form-control mb-3" placeholder="Digite seu nome" name="username"
+                            <input type="text" class=" input-text" placeholder="Digite seu nome" name="username"
                                 required>
 
                         </form>
@@ -53,6 +53,6 @@
 
     </div>
 </div>
-</div>
+
 
 {% endblock %}
