--- a/templates/base.html
+++ b/templates/base.html
@@ -21,5 +21,6 @@
         {% endblock %}
     </div>
     </div>
+    <script src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
