--- a/templates/sala.html
+++ b/templates/sala.html
@@ -16,15 +16,15 @@
         {% if sala.data_inicio %}
         <div class="row">
             <div class="col-6">
-                <p>Número da rodada:</p>
+                <p>Número da rodada: {{rodada.numero}} </p>
             </div>
             <div class="col-6">
-                <p>Letra sorteada: {{sala.rodadas[0].letra.letra}}</p>
+                <p>Letra sorteada: {{rodada.letra.letra}}</p>
             </div>
         </div>
         {% endif %}
 
-       
+
         <div class="row">
             <!-- Coluna de jogadores -->
             <div class="col-md-2 col-lg-2">
@@ -48,6 +48,8 @@
 
 
                 <div>
+
+
                     <form action="/sala/stop">
                         <input type="hidden" name="sala_id" value="{{ sala.id }}">
                         {% for tema in temas %}
@@ -56,11 +58,32 @@
                             name="tema_{{tema.id}}" placeholder="Digite a resposta para {{tema.nome}}" required>
                         {% endfor %}
 
-                        {{sala.temas}}
-                        {{temas}}
-
                         <button type="submit" class="btn btn-danger">STOP</button>
+
                     </form>
+                    {{rodada.data_inicio.strftime('%d/%m/%Y %H:%M:%S') if rodada.data_inicio }}
+                    <div id="hora" class="display-6 text-primary"></div>
+
+                    <div class="container text-center mt-5">
+                        <h2>Tempo restante:</h2>
+                        <div id="timer" class="display-4 fw-bold text-danger">{{ sala.tempo }}</div>
+                        <div class="progress mt-3" style="height: 25px;">
+                            <div id="progress-bar" class="progress-bar bg-danger" role="progressbar"
+                                style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="container text-center mt-5">
+                        <h2>Tempo restante:</h2>
+                        <div id="timer" class="display-4 fw-bold text-danger"></div>
+                        <div class="progress mt-3" style="height: 25px;">
+                            <div id="progress-bar" class="progress-bar bg-danger" role="progressbar"
+                                style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                    <script>
+                        iniciarContagem("{{ rodada.data_inicio.strftime('%Y-%m-%dT%H:%M:%S') }}", "{{ rodada.tempo }}");
+                    </script>
 
                 </div>
                 {% else %}
