--- a/static/style.css
+++ b/static/style.css
@@ -78,3 +78,17 @@
     border-radius: 10px;
 
 }
+
+.botao-sair {
+    background-color: #d32923;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    min-width: 150px;
+}
+
+.botao-sair:hover {
+    background-color: #d15c58;
+    color: white;
+}
