--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <title>STOP</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-   
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     
 </head>
 <body>
@@ -22,5 +22,6 @@
     </div>
     </div>
     <script src="{{ url_for('static', filename='app.js') }}"></script>
+
 </body>
 </html>
