--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -6,56 +6,58 @@
 
 
 
-        <h1>Bem-vindo ao STOP! {{current_user.nome}}</h1>
+    <h1>Bem-vindo ao STOP! {{current_user.nome}}</h1>
 
-        <br>
-
-
+    <br>
 
 
-        <div class="row">
-            <div class="col-md-5 col-lg-5 d-flex justify-content-center">
 
-                <div class="row align-items-center">
-                    <div class="col-md-5 col-lg-5 d-flex justify-content-center">
-                        <img src="/static/avatar.jpg" alt="Avatar" class="img-fluid rounded-circle"
-                            style="width: 120px; height: 120px;">
-                    </div>
 
-                    <div class="col-md-7 col-lg-7 d-flex flex-column justify-content-center">
-                        <form action="/jogar">
-                            
-                            <input type="text" class=" input-text" placeholder="Digite seu nome" name="username"
-                                required>
+    <div class="row">
+        <div class="col-md-5 col-lg-5 d-flex justify-content-center">
 
-                        </form>
-                    </div>
+            <div class="row align-items-center">
+                <div class="col-md-5 col-lg-5 d-flex justify-content-center">
+                    <img src="/static/avatar.jpg" alt="Avatar" class="img-fluid rounded-circle"
+                        style="width: 120px; height: 120px;">
+                </div>
+
+                <div class="col-md-7 col-lg-7 d-flex flex-column justify-content-center">
+                    <form action="/jogar">
+
+                        <input type="text" class=" input-text" placeholder="Digite seu nome" name="username"
+                            value="{{current_user.nome}}" disabled required>
+
+                    </form>
                 </div>
             </div>
-
-
-
-
-            <div class="col-md-7 col-lg-7 d-flex flex-column justify-content-center">
-                <div class="text-center mb-3">
-                    <a class="btn botao w-auto mx-auto" href="/jogar">Jogar</a>
-                </div>
-                <div class="text-center mb-3">
-                    <a class="btn botao w-auto mx-auto" href="/criar_sala">Criar Sala</a>
-                </div>
-                <div class="text-center mb-3">
-                    <a class="btn botao w-auto mx-auto" href="/salas">Salas Criadas</a>
-                </div>
-                  <div class="text-center mb-3">
-                    <a class="btn botao-sair w-auto mx-auto " href="/logout">Sair</a>
-                </div>
-                
-            </div>
-
-
         </div>
 
+
+
+
+        <div class="col-md-7 col-lg-7 d-flex flex-column justify-content-center">
+            <div class="text-center mb-3">
+                <a class="btn botao w-auto mx-auto" href="/jogar">Jogar</a>
+            </div>
+            <div class="text-center mb-3">
+                <a class="btn botao w-auto mx-auto" href="/criar_sala">Criar Sala</a>
+            </div>
+            <div class="text-center mb-3">
+                <a class="btn botao w-auto mx-auto" href="/salas">Salas Criadas</a>
+            </div>
+            <div class="text-center mb-3">
+                <a class="btn botao-sair w-auto mx-auto " href="/logout">Sair</a>
+            </div>
+
+        </div>
+        
+       
+
+
     </div>
+
+</div>
 </div>
 
 
